adding additional checks